# agentplane-harbor-adapter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cost.md  evidence-template.md  runbook.md  submission-plan.md
scripts/: agentplane_bench.sh  check_integrity.py  estimate_cost.py  harbor_smoke_claude_code.sh  harbor_smoke_codex.sh
src/agentplane_harbor_adapter/: __init__.py  agentplane_claude_code.py  agentplane_codex.py  base.py  common.py  evaluator.py
tests/: test_common.py  test_imports.py
